--- a/Spring/prj-practice/SNS/src/main/resources/application.yaml
+++ b/Spring/prj-practice/SNS/src/main/resources/application.yaml
@@ -17,4 +17,8 @@ spring:
     platform: postgres
     driver-class-name: org.postgresql.Driver
 
+jwt:
+  secret-key: fast_campus.sns-application-2023.secret_key
+  token.expired-time-ms: 2592000000
+
 
