--- a/spring-loan/src/main/resources/application.yml
+++ b/spring-loan/src/main/resources/application.yml
@@ -23,6 +23,6 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
-      location: # file upload path
+      location: /C:\backup\dev\files
 logging.level:
   org.hibernate.SQL: debug
